@@ -30,7 +30,7 @@
 	Manifest: https://github.com/EQEmu/Server/blob/master/utils/sql/db_update_manifest.txt	
 */
 
-#define CURRENT_BINARY_DATABASE_VERSION 9076
+#define CURRENT_BINARY_DATABASE_VERSION 9077
 #define COMPILE_DATE	__DATE__
 #define COMPILE_TIME	__TIME__
 #ifndef WIN32
